Changelog
=========

v0.0.14
=======

Not released.

- Add DisplayAttribute attributes to Fee properties
- Drop PaymentMethod.PublicAdministrationPaymentMethod property.
- Add PaymentMethod.PublicAdministrationCode property.
- Add static PaymentHelpers.PaymentMethods read-only collection.
- Payment.PaymentMethod defaults to MP01/contanti.
- Refactor all resx files by moving them to the Resources folder.

v0.0.13
=======

Released on May 4, 2018.

- Description attributes for Vat properties.
- New Models.PropertyModels.Vat model.

v0.0.12
=======

- Add and use the VatIdentificationNumberPrompt resource string.
- Test: now a NET Core/MSTest project.
- Test: drop Autofixture dependency.

v0.0.11
=======

Released on April 4, 2018.

- Use DisplayAttribute extra options for property Description and Prompt.

v0.0.10
=======

Released on March 27, 2018.

- Company 'user' properties now carry a Description attribute.
- Default value for FiscalProfile.IsVatExcluded = true.
- Default value for FiscalProfile.IsLegalEntity = true.
- Default value for Preferences.UnitOfMeasure = "N.".
- Add tests for the above default values
- Add NUnit3 test adapter so tests can actually run in VS.

v0.0.9
======

Released on March 21, 2018

- Add DisplayAttribute to Company.Logo 
- Fix DisplayAttribute for FiscalProfile.IsFreelance
- Fix DisplayAttribute for Preferences.MailSettings

v0.0.8
======

Released on March 20, 2018

- Company.IsLegalEntity moved to Company.FiscalProfile
- Company.IsVatExcluded moved to Company.FiscalProfile
- Company.Vat moved to Company.FiscalProfile
- Company.REACode moved to Company.FiscalProfile
- Company.SIACode moved to Company.FiscalProfile
- Company.Logo moved to Company.Preferences
- EmailAttachment renamed to MailSettings
- EmailAttachment.MessageBody moved to MailSettings.Template.MessageBody
- EmailAttachment.Username moved to MailSettings.Template.SmptUsername
- EmailAttachment.Password moved to MailSettings.Template.SmptPassword